# epollserv

./: CMakeLists.txt  Dockerfile  Makefile  README.md  bld.sh  epollsesrv  main.cpp
include/: client.h  event.h  fd.h  server.h
package/: PKGBUILD  epollserv  epollserv.install  epollserv.service
src/: client.cpp  client_info.cpp  main.cpp  server.cpp  udp.cpp
test/: Dockerfile  Makefile  README.md  client  client.cpp
